Added queries to api-docs and removed all PUT references for score route
Because we aren't using the PUT for scoreController anymore, updated the score.js route file as well as the scoreController.js file. Removed /game require from index.js.

Added queries for the following GET routes:
/scores
/agencies
/cases
